--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8081
 spring.application.name=Client
+
+api.client.root.path = http://localhost:8080/api
+api.client.messages.path = /messages/send
