parallel client calls and client refactor

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=Client
 
 api.client.root.path = http://localhost:8080/api
 api.client.messages.path = /messages/send
+
+jobs.per.task = 10
