--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,76 @@ services:
     image: postgres:13.4
     container_name: database
     ports:
-      - 5432:5432
+    - 5432:5432
     restart: always
     env_file:
-      - docker/postgres-db/postgres.env
+    - docker/postgres-db/postgres.env
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
+    container_name: es01
+    environment:
+    - node.name=es01
+    - cluster.name=es-docker-cluster
+    - discovery.seed_hosts=es02,es03
+    - cluster.initial_master_nodes=es01,es02,es03
+    - bootstrap.memory_lock=true
+    - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+    - ../data01:/usr/share/elasticsearch/data
+    - ../logs01:/usr/share/elasticsearch/logs
+    ports:
+    - 9200:9200
+    networks:
+    - elastic
+  es02:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
+    container_name: es02
+    environment:
+    - node.name=es02
+    - cluster.name=es-docker-cluster
+    - discovery.seed_hosts=es01,es03
+    - cluster.initial_master_nodes=es01,es02,es03
+    - bootstrap.memory_lock=true
+    - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+    - ../data02:/usr/share/elasticsearch/data
+    - ../logs02:/usr/share/elasticsearch/logs
+    networks:
+    - elastic
+  es03:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
+    container_name: es03
+    environment:
+    - node.name=es03
+    - cluster.name=es-docker-cluster
+    - discovery.seed_hosts=es01,es02
+    - cluster.initial_master_nodes=es01,es02,es03
+    - bootstrap.memory_lock=true
+    - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+    - ../data03:/usr/share/elasticsearch/data
+    - ../logs03:/usr/share/elasticsearch/logs
+    networks:
+    - elastic
+volumes:
+  data01:
+  logs01:
+  data02:
+  logs02:
+  data03:
+  logs03:
+networks:
+  elastic:
+    driver: bridge
