--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/changelog_master.xml
+
+spring.elasticsearch.rest.uris=http://localhost:9200
