admin actions added from es datasource

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/changelog_master.xml
 
 spring.elasticsearch.rest.uris=http://localhost:9200
+
+logging.level.tracer=TRACE
