basic authentication / authorization enabled for Rest API

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.liquibase.change-log=classpath:/db/changelog/changelog_master.xml
 
 spring.elasticsearch.rest.uris=http://localhost:9200
 
-logging.level.tracer=TRACE
+#logging.level.tracer=TRACE
