--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.application.name=Client
 
 api.client.root.path = http://localhost:8080/api
 api.client.messages.path = /messages/send
+api.client.username = client
+api.client.password = client_key
 
 jobs.per.task = 10
